--- a/expressjs/package.json
+++ b/expressjs/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
+    "express-handlebars": "^6.0.6",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3"
   }
